fixed overflow on messages inside a chat removed a div inside html fixed css on eliminated div

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body>main {
     position: absolute;
     height: 95vh;
     /* width of 80% before complete */
-    width: 95%;
+    width: 80%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -153,6 +153,8 @@ a,
     background-size: contain;
     height: 84%;
     border-right: #f3eeea 1px solid;
+    padding: 3rem 2rem 0;
+    overflow: auto;
 }
 
 .text-box {
@@ -167,13 +169,6 @@ a,
     height: 60%;
     border: 0;
     padding: 0 0.5rem;
-}
-
-.chat-container {
-    padding-top: 3rem;
-    margin: 0 auto;
-    width: 80%;
-    height: 100%;
 }
 
 .message {
